[project]
name = "pyutils"
version = "0.2.1"
description = "Common utility functions for python scripts"
authors = [
    {email = "root@xken.net"},
    {name = "ARX8x"}
]
dependencies = [
    "pytz>=1.0",
    "python_dotenv>=0.14"
]

classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]

[project.urls]
homepage = "https://github.com/xKern/Python-Utils"
